--- a/Extra-Level1.ipynb
+++ b/Extra-Level1.ipynb
@@ -20,6 +20,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "98fdc2f3-2b0d-483c-9c54-e110c610a12f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your institute name? :  Hope AI\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('Enter your institute name? : ')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "0933199a-dabd-48de-a5ec-f03595fb8694",
    "metadata": {},
@@ -128,6 +146,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "de858d29-4015-4ba3-89b1-e99d6cde4d8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "a=  76\n",
+      "b=  31\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Float Div = 2.4516129032258065\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = int(input(\"a= \")) \n",
+    "num2 = int(input(\"b= \")) \n",
+    "print(\"Float Div =\",num1/num2) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "d4492444-e6f9-4823-aa5f-f2f3587340b8",
    "metadata": {},
@@ -151,7 +197,7 @@
    "source": [
     "num1=int(input(\"a=\"))\n",
     "num2=int(input(\"b=\"))\n",
-    "print(\"Float Div=\", num1//num2)"
+    "print(\"Floor Div=\", num1//num2)"
    ]
   },
   {
