--- a/Extra-level2.ipynb
+++ b/Extra-level2.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "ec2d9a83-7aad-4db9-8137-2f9bb4ae2ce2",
    "metadata": {},
    "outputs": [
@@ -223,11 +223,11 @@
      "output_type": "stream",
      "text": [
       "(20,10,16,19,25,1,276,188)\n",
-      "20 is odd\n",
-      "10 is odd\n",
-      "16 is odd\n",
-      "276 is odd\n",
-      "188 is odd\n"
+      "20 is even\n",
+      "10 is even\n",
+      "16 is even\n",
+      "276 is even\n",
+      "188 is even\n"
      ]
     }
    ],
@@ -236,7 +236,7 @@
     "print(\"(20,10,16,19,25,1,276,188)\") \n",
     "for i in num: \n",
     "   if i % 2 == 0: \n",
-    "       print(i,\"is odd\") "
+    "       print(i,\"is even\") "
    ]
   },
   {
