--- a/faircopy.ipynb
+++ b/faircopy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "d3eb40d0-c579-496c-91d9-c18c3b1e87f1",
    "metadata": {},
    "outputs": [],
@@ -13,8 +13,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "cc4f537f-6660-49bb-b864-205842cd6f98",
+   "execution_count": 5,
+   "id": "6183cde9-3f74-4d3c-b686-df472000d74a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sub-fields in AI are:\n",
+      "Machine Learning\n",
+      "Neural Networks\n",
+      "Vision\n",
+      "Robotics\n",
+      "Speech Processing\n",
+      "Natural Language Processing\n"
+     ]
+    }
+   ],
+   "source": [
+    "multipleFunctions.Subfields()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "080714f6-62ea-454f-bd3a-24e3583d300d",
    "metadata": {},
    "outputs": [
     {
@@ -38,11 +62,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6183cde9-3f74-4d3c-b686-df472000d74a",
+   "execution_count": 7,
+   "id": "6c37bfe0-56b0-4191-90eb-50055a6bb7cb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Subject1=  98\n",
+      "Subject2=  99\n",
+      "Subject3=  98\n",
+      "Subject4=  80\n",
+      "Subject5=  90\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total :  465\n",
+      "Percentage :  93.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "multipleFunctions.percentage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "417d62a5-0b28-451a-af5f-a64b02ab214b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Height: 6\n",
+      "Breadth: 6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area formula: (Height*Breadth)/2\n",
+      "Area of Triangle:  18.0\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Height1: 5\n",
+      "Height2: 5\n",
+      "Breadth: 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perimeter formula: Height1+Height2+Breadth\n",
+      "Perimeter of Triangle:  15\n"
+     ]
+    }
+   ],
+   "source": [
+    "multipleFunctions.triangle()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "aa01e51b-fec1-4306-a149-1161f08a16fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Your Gender:  Female\n",
+      "Your Age:  20\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ELIGIBLE\n"
+     ]
+    }
+   ],
+   "source": [
+    "multipleFunctions.Eligible()"
+   ]
   }
  ],
  "metadata": {
